--- a/assets/style.css
+++ b/assets/style.css
@@ -11,6 +11,9 @@ textarea{
   color: #000000;
   border-left: 1px solid black;
   padding: 10px;
+  width:100%;
+  height:100%;
+  margin:0;
 }
 
 .jumbotron {
@@ -63,9 +66,16 @@ textarea{
   border-bottom-right-radius: 15px;
   background-color: #06AED5;
   color: white;
+  margin: 0;
 }
 
-.saveBtn i:hover {
-  font-size: 20px;
+.btnText {
+  margin-top: 18px;
+  text-align: center;
+}
+
+.saveBtn:hover {
+  font-size: 27px;
   transition: all .3s ease-in-out;
 }
+
